Bug 761489 - New addon page overflows when text is wrapped; r=Unfocused a=akeybl

--- a/toolkit/themes/pinstripe/mozapps/extensions/newaddon.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/newaddon.css
@@ -25,6 +25,7 @@
 }
 
 #addon-container {
+  overflow: visible; /* bug 761489 */
   max-width: 600px;
   margin: 20px;
   padding: 30px 90px;
